examples/checker_tests/bad/equality-list.p4
control C() {
    apply {
        bool b = {1, 2} == {1, 2};
    }
}